--- a/Home.html
+++ b/Home.html
@@ -24,6 +24,9 @@
     <figure class="mt-10">
       <blockquote class="text-center text-xl/8 font-semibold text-white sm:text-2xl/9">
         <p>“Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”</p>
+        <p>“Qué bonito es verte durmiendo por la mañana, hermosa como un ángel.”</p>
+        <p>“La belleza se termina dónde comienza la ignorancia.”</p>
+        <p>“La belleza se encuentra en el alma de las personas.”</p>
       </blockquote>
       <figcaption class="mt-10">
         <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="mx-auto size-10 rounded-full" />
