--- a/Home.html
+++ b/Home.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-	<link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-	<title>ToolsTIC</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>ToolsTIC</title>
 </head>
-<body class="pt-16 pb-16 min-h-screen bg-gray-100">
-	<header class="mb-24 bg-linear-to-r from-slate-800 to-indigo-600 fixed top-0 z-50 w-full shadow">
-		<h1 class="text-slate-50 p-4 text-4xl font-extrabold">ToolsTIC</h1>
-	</header>
-	<main>
-		<section class=" m-16 relative isolate overflow-hidden bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
-  <div class="absolute inset-0 -z-10 bg-[radial-gradient(45rem_50rem_at_top,var(--color-indigo-500),transparent)] opacity-10"></div>
-  <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] bg-gray-900 shadow-xl ring-1 shadow-indigo-500/5 ring-white/5 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center"></div>
-  <div class="mx-auto max-w-2xl lg:max-w-4xl">
-    <i class="fa-solid fa-seedling"></i>
-    <figure class="mt-10">
-      <blockquote class="text-center text-xl/8 font-semibold text-white sm:text-2xl/9">
-        <p>“Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”</p>
-        <p>“Qué bonito es verte durmiendo por la mañana, hermosa como un ángel.”</p>
+
+<body class="min-h-screen flex flex-col">
+  <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow">
+    <h1 class="text-slate-50 font-extrabold p-4 text-[clamp(1rem,2vw,2rem)]">ToolsTIC</h1>
+  </header>
+  <main class="flex-1 pt-28 pb-4 p-4 flex items-center justify-center">
+    <section
+      class="group relative isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed w-1/4 aspect-square min-w-80 transform transition-transform duration-200
+               hover:scale-105 focus:scale-110" tabindex="0">
+      <div class="absolute inset-0 -z-10 rounded-full"></div>
+      <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] rounded-full">
+      </div>
+      <div class="mx-auto max-w-2xl lg:max-w-4xl">
+        <figure class="mt-10">
+          <blockquote class="text-center">
+            <span class="text-yellow-600 text-[clamp(3rem,2vw,5rem)]">
+                <i class="fa-solid fa-star color-yellow-700 m-8 group-hover:text-yellow-400 group-focus:text-yellow-400 transition-colors duration-200"></i>
+            </span>
+            <p class="text-gray-600 font-semibold italic text-[clamp(1rem,2vw,1.50rem)]">“Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”</p>
+            <!--<p>“Qué bonito es verte durmiendo por la mañana, hermosa como un ángel.”</p>
         <p>“La belleza se termina dónde comienza la ignorancia.”</p>
-        <p>“La belleza se encuentra en el alma de las personas.”</p>
-      </blockquote>
-      <figcaption class="mt-10">
-        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="mx-auto size-10 rounded-full" />
-        <div class="mt-4 flex items-center justify-center space-x-3 text-base">
-          <div class="font-semibold text-white">Anónimo</div>
-          <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-white">
-            <circle r="1" cx="1" cy="1" />
-          </svg>
-          <div class="text-gray-400">Anónimo</div>
-        </div>
-      </figcaption>
-    </figure>
-  </div>
-</section>
-	</main>
-	<footer  class="bg-gray-800 text-white p-4 text-center">
-		<div class="max-w-7xl mx-auto px-4 text-center text-sm text-gray-400">
-			© 2025 ToolsTIC. Todos los derechos reservados.
-		</div>
-	</footer>
+        <p>“La belleza se encuentra en el alma de las personas.”</p>-->
+          </blockquote>
+          <figcaption class="mt-10">
+            <div class="mt-4 flex items-center justify-center space-x-3 text-base">
+              <div class="font-semibold text-gray-600">Anónimo</div>
+            </div>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
+  <footer class="bg-gray-800 text-white p-4 text-center">
+    <div class="text-gray-400 text-[clamp(0.75rem,2vw,1rem)]">
+      © <span id="current-year"></span> ToolsTIC. Todos los derechos reservados.
+    </div>
+  </footer>
+  <script>
+  document.getElementById('current-year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
