Modificando el body y el main para que el footer salga directamente en pantallas tipo celular y no tenga que desplazarse hacia abajo para verlo.

--- a/Home.html
+++ b/Home.html
@@ -9,11 +9,11 @@
   <title>ToolsTIC</title>
 </head>
 
-<body class="min-h-screen flex flex-col">
+<body class="min-h-screen flex flex-col min-h-screen">
   <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow">
     <h1 class="text-slate-50 font-extrabold p-4 text-[clamp(1rem,2vw,2rem)]">ToolsTIC</h1>
   </header>
-  <main class="flex-1 pt-28 pb-4 p-4 flex items-center justify-center">
+  <main class="flex-1 pt-10 pb-4 p-4 flex items-center justify-center">
     <section
       class="group relative isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed w-1/4 aspect-square min-w-80 transform transition-transform duration-200
                hover:scale-105 focus:scale-110" tabindex="0">
