--- a/Home.html
+++ b/Home.html
@@ -6,18 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="images/favicon.png" sizes="512x512">
   <title>ToolsTIC</title>
 </head>
 
 <body class="min-h-screen flex flex-col">
   <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow">
-    <h1 class="text-slate-50 font-extrabold p-4 text-[clamp(1rem,2vw,2rem)]">ToolsTIC</h1>
+    <img src="images/ToolsTIC_header.png" alt="Logo ToolsTIC" class="h-24 ml-4 mr-2">
+    <!--<h1 class="text-slate-50 font-extrabold p-4 text-[clamp(1rem,2vw,2rem)]">ToolsTIC</h1>-->
   </header>
-  <main class="flex-1 pt-10 pb-4 p-4 flex items-center justify-center">
-    <section class="group relative isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed w-1/4 aspect-square min-w-80 transform transition-transform duration-200
+  <main class="flex-1 pt-24 pb-4 p-4 flex items-center justify-center">
+    <section class="group isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed w-1/4 aspect-square min-w-80 transform transition-transform duration-200
                hover:scale-105 focus:scale-110" tabindex="0">
       <div class="absolute inset-0 -z-10 rounded-full"></div>
-      <div class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] rounded-full">
+      <div
+        class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] rounded-full bg-">
       </div>
       <div class="mx-auto max-w-2xl lg:max-w-4xl">
         <figure class="mt-10">
