--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -11,29 +11,32 @@
 </head>
 
 <body class="min-h-screen flex flex-col">
-  <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow">
-    <img src="images/ToolsTIC_header.png" alt="Logo ToolsTIC" class="h-24 ml-4 mr-2">
-    <!--<h1 class="text-slate-50 font-extrabold p-4 text-[clamp(1rem,2vw,2rem)]">ToolsTIC</h1>-->
+
+  <!-- HEADER -->
+  <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow flex items-center p-2 sm:p-4">
+    <img src="images/ToolsTIC_header.png" alt="Logo ToolsTIC" class="h-16 sm:h-20 md:h-24 max-w-full h-auto">
   </header>
-  <main class="flex-1 pt-24 pb-4 p-4 flex items-center justify-center">
-    <section class="group isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed w-1/4 aspect-square min-w-80 transform transition-transform duration-200
-               hover:scale-105 focus:scale-110" tabindex="0">
+
+  <!-- MAIN -->
+  <main class="flex-1 pt-24 pb-4 px-4 flex items-center justify-center">
+    <section class="group relative isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed 
+                w-3/4 sm:w-1/2 md:w-1/3 lg:w-1/4 aspect-square min-w-0 transform transition-transform duration-200
+                hover:scale-105 focus:scale-110" tabindex="0">
+
+      <!-- Fondo decorativo -->
       <div class="absolute inset-0 -z-10 rounded-full"></div>
-      <div
-        class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] rounded-full bg-">
-      </div>
-      <div class="mx-auto max-w-2xl lg:max-w-4xl">
+      <div class="absolute inset-y-0 right-1/2 -z-10 mr-4 sm:mr-16 w-[150%] sm:w-[200%] origin-bottom-left skew-x-[-30deg] rounded-full"></div>
+
+      <!-- Contenido -->
+      <div class="mx-auto max-w-xl sm:max-w-2xl lg:max-w-4xl">
         <figure class="mt-10">
           <blockquote class="text-center">
-            <span class="text-yellow-600 text-[clamp(3rem,2vw,5rem)]">
-              <i
-                class="fa-solid fa-star text-yellow-700 m-8 group-hover:text-yellow-400 group-focus:text-yellow-400 transition-colors duration-200"></i>
+            <span class="text-yellow-600 text-[clamp(2rem,5vw,4rem)] sm:text-[clamp(3rem,2vw,5rem)]">
+              <i class="fa-solid fa-star text-yellow-700 m-4 sm:m-8 group-hover:text-yellow-400 group-focus:text-yellow-400 transition-colors duration-200"></i>
             </span>
-            <p class="text-gray-600 font-semibold italic text-[clamp(1rem,2vw,1.50rem)]">“Estaba ciego, ahora veo la luz
-              y el resplandor de tu belleza.”</p>
-            <!--<p>“Qué bonito es verte durmiendo por la mañana, hermosa como un ángel.”</p>
-        <p>“La belleza se termina dónde comienza la ignorancia.”</p>
-        <p>“La belleza se encuentra en el alma de las personas.”</p>-->
+            <p class="text-gray-600 font-semibold italic text-[clamp(0.9rem,2.5vw,1.5rem)] sm:text-[clamp(1rem,2vw,1.5rem)]">
+              “Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”
+            </p>
           </blockquote>
           <figcaption class="mt-10">
             <div class="mt-4 flex items-center justify-center space-x-3 text-base">
@@ -44,29 +47,35 @@
       </div>
     </section>
   </main>
+
+  <!-- BOTONES FLOTANTES -->
   <section>
     <a href="https://wa.me/573128425463?text=Hola%20quiero%20más%20información%20sobre%20el%20proyecto%20ToolsTIC!"
       target="_blank"
-      class="fixed bottom-4 right-4 bg-green-500 text-white w-14 h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-green-600 transition-colors duration-300 z-50">
-      <i class="fa-brands fa-whatsapp text-3xl"></i>
+      class="fixed bottom-4 right-4 bg-green-500 text-white w-12 h-12 sm:w-14 sm:h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-green-600 transition-colors duration-300 z-50">
+      <i class="fa-brands fa-whatsapp text-2xl sm:text-3xl"></i>
     </a>
     <a href="https://www.linkedin.com/in/reyesomaryesid" target="_blank"
-      class="fixed bottom-4 right-20 bg-blue-600 text-white w-14 h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-blue-700 transition-colors duration-300 z-50">
-      <i class="fa-brands fa-linkedin text-3xl"></i>
+      class="fixed bottom-4 right-20 bg-blue-600 text-white w-12 h-12 sm:w-14 sm:h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-blue-700 transition-colors duration-300 z-50">
+      <i class="fa-brands fa-linkedin text-2xl sm:text-3xl"></i>
     </a>
     <a href="mailto:omaryesidreyes@gmail.com" target="_blank"
-      class="fixed bottom-4 right-36 bg-red-600 text-white w-14 h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-red-700 transition-colors duration-300 z-50">
-      <i class="fa-regular fa-envelope text-3xl"></i>
+      class="fixed bottom-4 right-36 bg-red-600 text-white w-12 h-12 sm:w-14 sm:h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-red-700 transition-colors duration-300 z-50">
+      <i class="fa-regular fa-envelope text-2xl sm:text-3xl"></i>
     </a>
   </section>
-  <footer class="bg-gray-800 text-white p-4 text-center">
-    <div class="text-gray-400 text-[clamp(0.75rem,2vw,1rem)]">
+
+  <!-- FOOTER -->
+  <footer class="bg-gray-800 text-white p-4 text-center mt-auto">
+    <div class="text-gray-400 text-[clamp(0.7rem,2vw,1rem)] sm:text-[clamp(0.75rem,2vw,1rem)]">
       © <span id="current-year"></span> ToolsTIC. Todos los derechos reservados.
     </div>
   </footer>
+
   <script>
     document.getElementById('current-year').textContent = new Date().getFullYear();
   </script>
+
 </body>
 
 </html>
