--- a/Home.html
+++ b/Home.html
@@ -13,33 +13,35 @@
 <body class="min-h-screen flex flex-col">
 
   <!-- HEADER -->
-  <header class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow flex items-center p-2 sm:p-4">
-    <img src="images/ToolsTIC_header.png" alt="Logo ToolsTIC" class="h-16 sm:h-20 md:h-24 max-w-full h-auto">
+  <header
+    class="fixed top-0 z-50 w-full bg-gradient-to-r from-slate-800 to-indigo-600 shadow flex items-center p-2 sm:p-4">
+    <img src="images/ToolsTIC_header.png" alt="Logo ToolsTIC" class="h-12 sm:h-16 md:h-20 lg:h-24 max-w-full h-auto">
   </header>
 
   <!-- MAIN -->
   <main class="flex-1 pt-24 pb-4 px-4 flex items-center justify-center">
-    <section class="group relative isolate overflow-hidden rounded-full border border-yellow-600 border-2 border-dashed 
-                w-3/4 sm:w-1/2 md:w-1/3 lg:w-1/4 aspect-square min-w-0 transform transition-transform duration-200
+    <section class="group relative overflow-hidden rounded-full border-2 border-yellow-600 border-dashed
+                w-3/4 sm:w-1/2 md:w-1/3 lg:w-1/4 aspect-square min-w-[200px]
+                flex flex-col justify-center items-center transform transition-transform duration-200
                 hover:scale-105 focus:scale-110" tabindex="0">
-      <!-- Contenido -->
-      <div class="mx-auto max-w-xl sm:max-w-2xl lg:max-w-4xl">
-        <figure class="mt-10">
-          <blockquote class="text-center">
-            <span class="text-yellow-600 text-[clamp(2rem,5vw,4rem)] sm:text-[clamp(3rem,2vw,5rem)]">
-              <i class="fa-solid fa-star text-yellow-700 m-4 sm:m-8 group-hover:text-yellow-400 group-focus:text-yellow-400 transition-colors duration-200"></i>
-            </span>
-            <p class="text-gray-600 font-semibold italic text-[clamp(0.9rem,2.5vw,1.5rem)] sm:text-[clamp(1rem,2vw,1.5rem)]">
-              “Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”
-            </p>
-          </blockquote>
-          <figcaption class="mt-10">
-            <div class="mt-4 flex items-center justify-center space-x-3 text-base">
-              <div class="font-semibold text-gray-600">Anónimo</div>
-            </div>
-          </figcaption>
-        </figure>
-      </div>
+
+      <!-- Contenido centrado -->
+      <figure class="flex flex-col justify-center items-center">
+        <blockquote class="text-center">
+          <span class="text-yellow-600 text-[clamp(2rem,5vw,4rem)] sm:text-[clamp(3rem,2vw,5rem)]">
+            <i
+              class="fa-solid fa-star text-yellow-700 m-4 sm:m-8 group-hover:text-yellow-400 group-focus:text-yellow-400 transition-colors duration-200"></i>
+          </span>
+          <p
+            class="text-gray-600 font-semibold italic text-[clamp(0.9rem,2.5vw,1.5rem)] sm:text-[clamp(1rem,2vw,1.5rem)]">
+            “Estaba ciego, ahora veo la luz y el resplandor de tu belleza.”
+          </p>
+        </blockquote>
+        <figcaption class="mt-4 text-center font-semibold text-gray-600">
+          Anónimo
+        </figcaption>
+      </figure>
+
     </section>
   </main>
 
